syntax = "proto3";

package uc.def;

option java_package = "io.github.jojoti.sservice-account.proto";
option java_outer_classname = "ServerErrorProtos";
option java_multiple_files = true;

enum BELLIS_UC_API_ERRORS {
  // 登录
  SUCCESS = 0;
  // 调用微信 server error
  GET_WX_MINI_PROGRAM_SERVER_ERROR = 5000000;
  // 微信 oauth2 调用出错
  GET_WX_OAUTH2_SERVER_ERROR = 5000001;

  // access token 验证失败
  UC_ACCESS_TOKEN_VALID_FAILED = 4000001;

  // 用户uc登录失效
  UC_USER_SESSION_EXPIRED = 4000002;

  // 创建 oauth2 code 错误
  CREATE_OAUTH2_CODE_FAILED = 4000003;

  // 签名验证错误
  OAUTH2_APP_ID_SIGN_ERROR = 4000004;

  // code 过期
  OAUTH2_CODE_EXPIRED = 4000005;
  // appId 不存在
  OAUTH2_APP_ID_NOT_FOUND = 4000006;
  // 签名时间过期
  OAUTH2_APP_SIGN_TIME_EXPIRED = 4000007;
}